<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- PARENT -->
	<parent>
		<groupId>org.nlp4j</groupId>
		<artifactId>nlp4j</artifactId>
		<version>1.3.1.0</version>
	</parent>
	<!-- ARTIFACT ID -->
	<artifactId>nlp4j-core</artifactId>
	<!-- JAR -->
	<packaging>jar</packaging>
	<name>nlp4j-core</name>
	<!-- https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core -->
	<!-- 1.3.3.0 : 2021-09-20 -->
	<!-- 1.3.4.0 : 2021-12-29 -->
	<!-- 1.3.5.0 : 2022-03-04 -->
	<!-- 1.3.5.1 : 2022-04-29 -->
	<!-- 1.3.6.0 : 2022-05-22 -->
	<!-- 1.3.6.1 : 2022-06-24 -->
	<!-- 1.3.7.0 : 2022-08-03 -->
	<!-- 1.3.7.1 : 2022-09-04 -->
	<!-- 1.3.7.2 : 2022-09-08 -->
	<!-- 1.3.7.3 : 2022-10-07 : UPDATES - UPOS20 -->
	<!-- x.x.x.x : 2022-11-30 : ChatGPT was released -->
	<!-- 1.3.7.4 : 2022-12-03 -->
	<!-- 1.3.7.5 : 2023-01-22 -->
	<!-- 1.3.7.6 : 2023-02-01 -->
	<!-- 1.3.7.7 : 2023-04-01 -->
	<!-- 1.3.7.8 : 2023-05-27 -->
	<!-- 1.3.7.9 : 2023-07-22 -->
	<!-- 1.3.7.10 : 2023-07-22 -->
	<!-- 1.3.7.11 : 2023-08-16 -->
	<!-- 1.3.7.12 : 2024-01-15 -->
	<!-- 1.3.7.13 : 2024-08-08 -->
	<!-- 1.3.7.14 : 2024-10-29 -->
	<!-- 1.3.7.15 : 2024-11-17 -->
	<!-- 1.3.7.16 : 2024-12-22 https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core/1.3.7.16 -->
	<!-- 1.3.7.17 : 2025-03-10 https://mvnrepository.com/artifact/org.nlp4j/nlp4j-core/1.3.7.17 -->
	<!-- 1.3.7.18 : 2025-03-27 -->
	<!-- 1.3.7.19 : 2026-01-02 -->
	<!-- 1.3.7.20 : 2026-05-06 -->
	<!-- 1.3.7.21 : 2026-05-29 -->
	<!-- 1.3.7.22 : 2026-08-22 https://central.sonatype.com/artifact/org.nlp4j/nlp4j-core -->
	<!-- 1.3.7.23 : 2026-09-14 https://central.sonatype.com/artifact/org.nlp4j/nlp4j-core small update -->
	<!-- 1.3.8.0? : Keyword のクラス設計変更？ -->
	<version>1.3.7.23</version>
	<description>Natural Language Processing Library for Java</description>
	<url>https://nlp4j.org/</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/oyahiroki/nlp4j</url>
		<connection>scm:git:git@github.com:oyahiroki/nlp4j.git</connection>
		<developerConnection>scm:git:git@github.com:oyahiroki/nlp4j.git</developerConnection>
	</scm>
	<developers>
		<developer>
			<id>oyahiroki</id>
			<name>Hiroki Oya</name>
			<email>oyahiroki@gmail.com</email>
			<url>https://twitter.com/oyahiroki</url>
			<roles>
				<role>lead</role>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>-9</timezone>
		</developer>
	</developers>
	<profiles>
		<!-- profile は親pom.xml に定義されている -->
	</profiles>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<build>
		<plugins>
			<!-- COMPILER -->
			<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<!-- version>3.1.1</version -->
				<version>3.8.0</version>
				<configuration>
					<!-- avoid error -->
					<additionalparam>-Xdoclint:none</additionalparam>
					<additionalOptions>-Xdoclint:none</additionalOptions>
					<additionalJOption>-Xdoclint:none</additionalJOption>
					<!--
					javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable -->
					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
					<author>true</author>
					<source>${maven.compiler.source}</source>
					<show>protected</show>
					<encoding>UTF-8</encoding>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<aggregate>true</aggregate>
					<notimestamp>true</notimestamp>
					<doctitle>${javadoc.title}</doctitle>
					<windowtitle>${javadoc.title}</windowtitle>
					<jarOutputDirectory>jar</jarOutputDirectory>
					<destDir>docs</destDir>
					<links>
						<link>https://docs.oracle.com/javase/jp/8/docs/api</link>
					</links>
					<groups>
						<group>
							<title>NLP4J</title>
							<packages>nlp4j*</packages>
						</group>
					</groups>
					<docfilessubdirs>true</docfilessubdirs>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
		<!-- dependency -->
		<!-- groupId>com.squareup.okhttp3</groupId -->
		<!-- artifactId>okhttp</artifactId -->
		<!-- version>3.14.9</version -->
		<!-- / dependency -->
		<!--
		https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<!-- dependency -->
		<!-- groupId>org.slf4j</groupId -->
		<!-- artifactId>slf4j-simple</artifactId -->
		<!-- version>1.7.36</version -->
		<!-- scope>test</scope -->
		<!-- /dependency -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>2.0.9</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.squareup.okio/okio -->
		<!-- dependency -->
		<!-- groupId>com.squareup.okio</groupId -->
		<!-- artifactId>okio</artifactId -->
		<!-- version>2.2.2</version -->
		<!-- /dependency -->
		<!--
		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.2</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<!-- 2023-08-16 : 2.11.0 to 2.13.0  -->
			<!-- 2023-11-19 : 2.13.0 to 2.15.0  -->
			<version>2.17.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.10.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<!-- 2023-08-16 : 3.12.0 to 3.13.0  -->
			<!-- 2023-11-23 : 3.13.0 to 3.14.0  -->
			<!-- 2026-01-02 : 3.14.0 to 3.18.0  -->
			<version>3.18.0</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<!-- version=4.4 size=1.42MB -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
		<!-- version=1.10.0 size=129KB -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<!-- 2023-08-16 : 1.9.0 to 1.10.0  -->
			<version>1.10.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<!-- version=3.6.1 size=4.53MB -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.18.0</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.27.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.tukaani/xz -->
		<!-- 2025-09-23 -->
		<dependency>
		    <groupId>org.tukaani</groupId>
		    <artifactId>xz</artifactId>
		    <version>1.10</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<!-- 2023-08-16 : 2.9.0 to 2.10.1  -->
			<version>2.10.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<!-- 1.14.3 : Sep 30, 2021 -->
		<!-- 1.15.3 : Aug 24, 2022 -->
		<!-- 1.17.2 : Dec 29, 2023 -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.17.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>